# Part2Part-SharedLibs

./: CMakeLists.txt  README.md
include/: Address.h  Command.h  CommandArgument.h  CommandBuilder.h  FileDescription.cpp  FileDescription.h  FileDescriptionBuilder.h  IOWrappers.h  IntegrityChecker.h  NetworkWrappers.h
lib/: Address.cpp  Command.cpp  CommandBuilder.cpp  FileDescription.cpp  FileDescriptionBuilder.cpp  IOWrappers.cpp  IntegrityChecker.cpp  NetworkWrappers.cpp
